@startuml Domain Model
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.2
title Domain Model - large scale view
hide empty members

class "Terminal" as terminal {
    - /results
}
class "DBRoutes" as DBRoutes {}
class "DBConnection" as DBConnection {}
class "DBCities" as DBCities {}

class "Routes" as routes {
    - routeID
    - departureDateTime
    - arrivalDateTime
    - traintype
    - daysofoperation
    - firstClassPrice
    - secondClassPrice
}
class "Connection" as connection {
    - /tripDuration
    - /qtyStops
    - /stopCities
    - /firstClassPrice
    - /secondClassPrice
    - /daysofoperation
}
class "Cities" as cities {
    - name: String
}
note right of cities
    Because plantuml does not support
    manual layout editing, the diagram
    is split into 3 files to clarify the
    relationships between classes Cities, 
    Routes and Connection.
end note



DBConnection *-- "*  " connection
DBCities  *-- "* " cities
DBRoutes  *-- "*" routes



cities "1..*    " -- "1..*      " cities 

terminal  -- DBRoutes : "accesses"

terminal  -- DBCities : "accesses"

terminal  -- DBConnection : "accesses"

DBConnection  -[hidden]> DBCities: "accesses"
DBCities  -[hidden]> DBRoutes: "acces             ses"
connection  -[hidden]> cities: "accesses"
cities  -[hidden]> routes: "accesses"

(cities, cities) .. connection

connection "1" -- "1..3   " routes : "use"

cities "1" -right- "1" routes

cities "1" -right- "1" routes

@enduml